# clear-cache

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: arch.rs  lib.rs  linux.rs  macos.rs  os.rs  windows.rs
tests/: basic.rs
