[package]
name = "clear-cache"
version = "0.1.1"
edition = "2021"
authors = ["Evian-Zhang <evianzhang1999@163.com>"]
license = "MIT OR Apache-2.0"
description = "A native implementation of `__builtin___clear_cache` without dependency of GCC/Clang."
homepage = "https://github.com/Evian-Zhang/clear-cache"
documentation = "https://docs.rs/clear-cache"
repository = "https://github.com/Evian-Zhang/clear-cache"
readme = "README.md"
keywords = ["cache", "clear-cache"]
categories = ["no-std"]

[badges]
maintenance = { status = "actively-developed" }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
libc = { version = "0.2", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = ["Win32_System_Threading", "Win32_System_Diagnostics_Debug"] }
