[package]
name = "clear-cache"
version = "0.1.2"
edition = "2021"
authors = ["Evian-Zhang <evianzhang1999@163.com>"]
license = "MIT OR Apache-2.0"
description = "A native implementation of `__builtin___clear_cache` without dependency of GCC/Clang."
homepage = "https://github.com/Evian-Zhang/clear-cache"
documentation = "https://docs.rs/clear-cache"
repository = "https://github.com/Evian-Zhang/clear-cache"
readme = "README.md"
keywords = ["cache", "clear-cache"]
categories = ["no-std"]

[badges]
maintenance = { status = "actively-developed" }

# Only pull in OS libraries on platforms where we don't have an ASM implementation

[target.'cfg(all(not(any(target_arch="x86",target_arch="x86_64",target_arch="loongarch64")),any(target_os="linux", target_os="android")))'.dependencies]
libc = { version = "0.2", default-features = false }

[target.'cfg(all(not(any(target_arch="x86",target_arch="x86_64",target_arch="loongarch64")),target_os="windows"))'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_System_Threading",
  "Win32_System_Diagnostics_Debug",
] }
